--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "sass": "^1.63.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
